--- a/25-TusLibros/4/substrings-finder-6000 zip/templates/_index.html
+++ b/25-TusLibros/4/substrings-finder-6000 zip/templates/_index.html
@@ -39,6 +39,7 @@
     include('./src/components/StringInputView.js')
     include('./src/components/SubstringsView.js')
     include('./src/components/SubstringDetailsView.js')
+    include('./src/components/CartView.js')
     include('./src/components/App.js')
 
     ///////////////////////////////////////////////////////////////////////////
